--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- The content below is only a placeholder and can be replaced.-->
-
+<!-- 
 <h1>
     Welcome to {{ title }}!
 </h1>
@@ -46,8 +46,6 @@
 
 <button>Cambiar</button>
 
-
-<!-- 
 <div>
     <ul>
         <li>user id</li>
@@ -90,6 +88,6 @@
 
 </table>
 
-<div class="alert alert-primary" role="alert">
-  This is a primary alert—check it out!
+<div *ngIf="estado" class="alert alert-primary" role="alert">
+  
 </div>
